# e57

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yaml
src/: bitpack.rs  blob.rs  bounds.rs  bs_out.rs  bs_read.rs  bs_write.rs  byte_stream.rs  comp_vector.rs  crc32.rs  cv_section.rs  date_time.rs  e57.rs  e57_reader.rs  e57_writer.rs  error.rs  extension.rs  extractor.rs  header.rs  image_writer.rs  images.rs  iterator.rs  lib.rs  limits.rs  packet.rs  paged_reader.rs  paged_writer.rs  pc_reader.rs  pc_reader_raw.rs  pc_reader_simple.rs  pc_writer.rs  point.rs  pointcloud.rs  points.rs  queue_reader.rs  record.rs  root.rs  transform.rs  xml.rs
testdata/: bunnyDouble.e57  bunnyFloat.e57  bunnyInt21.e57  bunnyInt24.e57  bunnyInt32.e57  cartesian_invalid_state_single.e57  corrupt_crc.e57  empty.e57  empty_pc.e57  float_intensity_without_min_max.e57  integer_intensity.e57  las2e57_no_images_tag.e57  no_ext_namespace.e57  original_guids.e57  read_error.e57  scaled_integer_intensity.e57  tinyCartesianFloatRgb.e57  tiny_pc_and_images.e57  tiny_pc_with_extension.e57  tiny_spherical.e57
testdata/cpp_generator/: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1  libe57format.diff  main.cpp  vcpkg.json
tests/: extensions.rs  reader_tests.rs  writer_tests.rs
tools/crc-validator/: Cargo.toml
tools/crc-validator/src/: main.rs
tools/e57-check-crc/: Cargo.toml
tools/e57-check-crc/src/: main.rs
tools/e57-extract-scan-info/: Cargo.toml
tools/e57-extract-scan-info/src/: main.rs
tools/e57-extract-xml/: Cargo.toml
tools/e57-extract-xml/src/: main.rs
tools/e57-from-xyz/: Cargo.toml
tools/e57-from-xyz/src/: main.rs
tools/e57-to-image/: Cargo.toml
tools/e57-to-image/src/: main.rs
tools/e57-to-laz/: Cargo.toml
tools/e57-to-laz/src/: main.rs
tools/e57-to-pano/: Cargo.toml
tools/e57-to-pano/src/: main.rs
tools/e57-to-xyz/: Cargo.toml
tools/e57-to-xyz/src/: main.rs
tools/e57-unpack/: Cargo.toml
tools/e57-unpack/src/: main.rs
tools/extract-images/: Cargo.toml
tools/extract-images/src/: main.rs
tools/extract-xml/: Cargo.toml
tools/extract-xml/src/: main.rs
tools/xyz-to-e57/: Cargo.toml
tools/xyz-to-e57/src/: main.rs
