[package]
name = "e57"
version = "0.2.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cry-inc/e57"
documentation = "https://docs.rs/e57"
license = "MIT"
keywords = ["e57", "lidar", "pointclouds", "laserscanning", "geospatial"]
categories = ["parser-implementations", "science::geo"]
description = "A pure Rust library for reading E57 files with point clouds."
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[dependencies]
roxmltree = "0.18"
